--- a/app/src/main/res/layout/dialog_add_task.xml
+++ b/app/src/main/res/layout/dialog_add_task.xml
@@ -1,40 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/addTask"
-        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="11dp"
+        android:text="Add Task"
         android:textSize="25sp"
-        android:textStyle="bold"
-        android:text="Add Task" />
+        android:textStyle="bold" />
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="246dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/addTask"
+        android:layout_marginStart="-15dp"
+        android:layout_marginTop="69dp" />
 
     <TextView
-        android:id="@+id/alarm"
-        android:layout_width="wrap_content"
+        android:id="@+id/taskName"
+        android:layout_width="80dp"
+        android:layout_height="23dp"
+        android:layout_alignStart="@+id/starttime"
+        android:layout_alignTop="@+id/spinner"
+        android:gravity="center_vertical"
+        android:text="Task Name"
+        android:textSize="15dp" />
+
+    <TimePicker
+        android:id="@+id/simpleTimePicker"
+        android:layout_width="246dp"
+        android:layout_height="162dp"
+        android:layout_alignStart="@+id/addTask"
+        android:layout_below="@+id/spinner"
+        android:layout_marginStart="-15dp"
+        android:timePickerMode="spinner" />
+
+    <TextView
+        android:id="@+id/starttime"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_gravity="center"
-        android:text="alarm" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="163dp"
+        android:gravity="center_vertical"
+        android:text="Start Time" />
 
-    <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="36dp">
 
-        <RadioButton
-            android:id="@+id/radioButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="RadioButton" />
-    </RadioGroup>
+    <TimePicker
+        android:id="@+id/endTimePicker"
+        android:layout_width="246dp"
+        android:layout_height="162dp"
+        android:layout_alignStart="@+id/spinner"
+        android:layout_below="@+id/simpleTimePicker"
+        android:timePickerMode="spinner" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/endTime"
+        android:layout_width="80dp"
+        android:layout_height="162dp"
+
+        android:layout_alignStart="@+id/taskName"
+        android:layout_below="@+id/simpleTimePicker"
+        android:gravity="center_vertical"
+        android:text="End Time" />
+</RelativeLayout>
