--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -24,7 +24,7 @@
         app:srcCompat="@android:drawable/ic_input_add" />
 
     <ListView
-        android:id = "@+id/taskListView"
+        android:id = "@+id/taskListView2"
         android:layout_width="368dp"
         android:layout_height="503dp"
         android:layout_marginBottom="8dp"
