--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -72,8 +72,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="46dp"
-        android:layout_marginEnd="38dp"
+        android:layout_marginBottom="25dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.975"
@@ -83,9 +83,10 @@
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
     <ListView
+        android:id="@+id/taskListView"
         android:layout_width="wrap_content"
-        android:layout_height="495dp"
+        android:layout_height="510dp"
 
-        android:layout_marginTop="56dp"/>
+        android:layout_marginTop="56dp" />
 
 </RelativeLayout>
