--- a/app/src/main/res/drawable-v24/gradient.xml
+++ b/app/src/main/res/drawable-v24/gradient.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#3D5069"
-        android:centerColor="#2A3c58"
-        android:endColor="#192943"
+        android:startColor="#a18cd1"
+        android:endColor="#fbc2eb"
         android:angle="0"/>
     <corners
         android:radius="0dp"/>
