--- a/app/src/main/res/drawable-v24/gradient.xml
+++ b/app/src/main/res/drawable-v24/gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#a18cd1"
+        android:startColor="#2980b9"
         android:endColor="#fbc2eb"
         android:angle="0"/>
     <corners
