--- a/app/src/main/res/drawable/itemgradient.xml
+++ b/app/src/main/res/drawable/itemgradient.xml
@@ -2,10 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#2980b9"
-        android:endColor="#fbc2eb"
-        android:angle="90"/>
-
+        android:startColor = "#2980b9"
+        android:endColor = "@android:color/transparent"
+        android:angle = "90"/>
     <corners
         android:radius="0dp"/>
 </shape>
