--- a/app/src/main/res/layout/recyclerview_test.xml
+++ b/app/src/main/res/layout/recyclerview_test.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TaskList_Activity">
+    tools:context=".TaskList_Activity"
+    android:background = "@drawable/gradient">
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -64,11 +65,13 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
+
         android:id="@+id/recycleView"
         android:layout_width="match_parent"
         android:layout_height="511dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:background = "@android:color/transparent">
 
     </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
