--- a/app/src/main/res/layout/taskformat.xml
+++ b/app/src/main/res/layout/taskformat.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="110dp"
-    android:focusable="true"
-    android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground">
+
+    android:background="@android:color/transparent">
+
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,11 +12,20 @@
         android:layout_width="336dp"
         android:layout_height="100dp"
         android:layout_centerInParent="true"
-        android:elevation="10dp">
+        android:focusable="true"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardElevation="5dp"
+        app:cardBackgroundColor="#00FFFFFF">
+        <!--app:cardBackgroundColor="@android:color/transparent"-->
+
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent">
+            <!--android:background="@android:color/transparent"-->
+
 
 
             <ImageView
@@ -75,6 +84,7 @@
                 android:layout_alignStart="@+id/taskName"
                 android:layout_below="@+id/taskName"
                 android:gravity="center_vertical"
+                android:textStyle = "bold"
                 android:text="Start:" />
 
             <TextView
@@ -85,6 +95,7 @@
                 android:layout_below="@+id/taskName"
                 android:layout_marginEnd="118dp"
                 android:gravity="center_vertical"
+                android:textStyle = "bold"
                 android:text="End:" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
