--- a/app/src/main/res/layout/recyclerview_test.xml
+++ b/app/src/main/res/layout/recyclerview_test.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".TaskList_Activity"
     android:background = "@drawable/gradient">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addtask"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="42dp"
+        android:layout_marginEnd="36dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:focusable="true"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/ic_menu_add" />
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
