--- a/app/src/main/res/layout/activity_login_temp.xml
+++ b/app/src/main/res/layout/activity_login_temp.xml
@@ -85,5 +85,27 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
+    <TextView
+        android:id="@+id/signUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="43dp"
+        android:textColor="#fff"
+        android:clickable="true"
+        android:text="SignUp" />
+
+    <TextView
+        android:id="@+id/loginFail"
+        android:layout_width="254dp"
+        android:layout_height="45dp"
+        android:layout_above="@+id/emailEditText"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="Username and password is incorrect"
+        android:visibility ="gone"
+        android:textColor="#F00" />
+
 
 </RelativeLayout>
