--- a/app/src/main/res/layout/taskformat.xml
+++ b/app/src/main/res/layout/taskformat.xml
@@ -82,7 +82,8 @@
                 android:layout_alignStart="@+id/taskName"
                 android:layout_below="@+id/taskName"
                 android:gravity="center_vertical"
-                android:text="Start:" />
+                android:text="Start:"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/textEnd"
@@ -92,7 +93,8 @@
                 android:layout_below="@+id/taskName"
                 android:layout_marginEnd="118dp"
                 android:gravity="center_vertical"
-                android:text="End:" />
+                android:text="End:"
+                android:textStyle="bold"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
