--- a/app/src/main/res/layout/tasklist.xml
+++ b/app/src/main/res/layout/tasklist.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id = "@+id/refreshLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TaskList_Activity"
@@ -89,3 +94,4 @@
 
     </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
