update task added

--- a/app/src/main/res/layout/addtaskform.xml
+++ b/app/src/main/res/layout/addtaskform.xml
@@ -336,7 +336,7 @@
             android:layout_height="64dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="840dp">>
+            android:layout_marginTop="840dp">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
