--- a/app/src/main/res/layout/taskformat.xml
+++ b/app/src/main/res/layout/taskformat.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="110dp"
 
@@ -12,16 +13,19 @@
         android:layout_width="336dp"
         android:layout_height="100dp"
         android:layout_centerInParent="true"
-
         app:cardElevation="5dp"
         app:cardBackgroundColor="#00FFFFFF">
         <!--app:cardBackgroundColor="@android:color/transparent"-->
 
 
         <RelativeLayout
+            android:background="?android:attr/selectableItemBackground"
+            android:focusable="true"
+            android:clickable="true"
+            android:id = "@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/transparent">
+            tools:background="@android:color/transparent">
             <!--android:background="@android:color/transparent"-->
 
 
