--- a/app/src/main/res/layout/child_list.xml
+++ b/app/src/main/res/layout/child_list.xml
@@ -8,14 +8,50 @@
     android:background = "@drawable/gradient">
 
 
-    <android.support.v7.widget.RecyclerView
-
-        android:id="@+id/recycleView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="48dp"
+        android:background="#fbc2eb">
+
+        <ImageButton
+            android:id="@+id/logoutBtn"
+            android:layout_width="57dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:background="@android:color/transparent"
+            android:clickable = "true"
+            app:srcCompat="@drawable/logout" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="244dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="18dp"
+            android:gravity="center_vertical"
+            android:text="Child List"
+            android:textColor="#FFF"
+            android:textSize="30dp" />
+    </RelativeLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="510dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:background="@android:color/transparent">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+
+            android:id="@+id/recycleView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:background="@android:color/transparent"></android.support.v7.widget.RecyclerView>
+
+    </ScrollView>
+
 </RelativeLayout>
